Name & Modulename Alignment Fixes

--- a/core/app/themes/suite8/css/layout/_recordview.scss
+++ b/core/app/themes/suite8/css/layout/_recordview.scss
@@ -33,13 +33,13 @@
   font-weight: 300;
   letter-spacing: 0.1em;
   text-transform: uppercase;
-  margin: 1em;
+  margin-left: 1.37rem;
 }
 
 .record-view-name {
   color: $median-grey;
   font-size: 1.5em;
-  margin-left: 1rem;
+  margin-left: 1.3rem;
   word-wrap: break-word;
 }
 
